--- a/html/challenge.css
+++ b/html/challenge.css
@@ -15,13 +15,13 @@ body {
 }
 
 .container {
-    margin-top: 90px;
+    margin-top: 256px;
     box-sizing: border-box;
     top: 0;
     left: 0;
     position: fixed;
-    width: 98vw;
-    height: 55vh;
+    width: 100vw;
+    height: 25vh;
     display: -webkit-flex;
     display: -moz-flex;
     display: -ms-flex;
@@ -145,6 +145,8 @@ body {
     display: inline-block;
     margin-top: 25px;
     margin-bottom: 25px;
+    margin-left: 25px;
+    margin-right: 50px;
     font-weight: bold;
     text-align: center;
     white-space: nowrap;
@@ -162,11 +164,10 @@ body {
     padding: 4px 10px 4px 10px;
     font-size: 12px;
     line-height: 1.5;
-    width: 84px;
+    width: 256px;
     background:rgb(8, 144, 185);
     color:#fff; 
     text-shadow:1px 1px 0 #84A51D;
- 
 }
 .container button:hover{
     box-sizing: border-box;
@@ -209,19 +210,6 @@ body {
     box-sizing: border-box;
     clear:both;
     margin:10px 0 10px 0;
-}             
-    .container select, 
-    .container input.day, 
-    .container input.year{
-        box-sizing: border-box;
-        display:block;
-        margin-bottom:10px;
-        margin-right:0;
-        width:100%;
-    }
-    .container button {
-        box-sizing: border-box;
-        display: block;
-        width: 100%;
-    }
+}
+
 }
