--- a/html/challenge.css
+++ b/html/challenge.css
@@ -21,7 +21,7 @@ body {
     left: 0;
     position: fixed;
     width: 100vw;
-    height: 25vh;
+    height: 30vh;
     display: -webkit-flex;
     display: -moz-flex;
     display: -ms-flex;
@@ -145,8 +145,6 @@ body {
     display: inline-block;
     margin-top: 25px;
     margin-bottom: 25px;
-    margin-left: 25px;
-    margin-right: 50px;
     font-weight: bold;
     text-align: center;
     white-space: nowrap;
@@ -162,7 +160,7 @@ body {
     border: 1px solid transparent;
     border-radius: 4px;
     padding: 4px 10px 4px 10px;
-    font-size: 12px;
+    font-size: 18px;
     line-height: 1.5;
     width: 256px;
     background:rgb(8, 144, 185);
@@ -210,6 +208,12 @@ body {
     box-sizing: border-box;
     clear:both;
     margin:10px 0 10px 0;
+}
+
+.container button {
+    box-sizing: border-box;
+    display: block;
+    width: 100%;
 }
 
 }
