--- a/html/challenge.css
+++ b/html/challenge.css
@@ -3,8 +3,9 @@ body {
     display: block;
 }
 .section_background {    
-    background-image:url("background.png");
+    background-image:url("LandingPageCatch.jpg");
     background-size: cover;
+    background-repeat: no-repeat;
     -webkit-filter: blur(5px);
     filter: blur(5px);
     height: 97vh;
